--- a/index.html
+++ b/index.html
@@ -9,10 +9,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>welcome To</h1>
-    <h1> <span class="name-highlight">Asad</span> Web Developer</h1>
-    <h3>World-class web Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sit eum quae consequatur porro velit consectetur doloribus maxime soluta a expedita vel adipisci molestias alias, nihil rerum sapiente quas optio quasi culpa amet illo impedit commodi dignissimos. Laborum rem quaerat inventore officia, ut illum ea.</p>
+   <section class="top-banner">
+       <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1> <span class="orange-highlight">Asad</span>  Web Developer.</h1>
+        <h3>World-class No. 1 Professional Web Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium similique iste, quas fugit cum harum quo, veniam at repudiandae adipisci recusandae. Inventore consequatur vitae soluta at sit incidunt nobis repellendus ipsa debitis accusamus? Quis, quae? Ex magni possimus sunt doloribus repellat maxime quisquam quo quasi!</p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/asad.raj.3348390">HIRE ME</a>
+        </div>
+        <div class="half-width">
+        <img src="images/jhankar.png" alt="">
+        </div>
+   </section>
+  <section class="dream-area">
+    <div class="half-width">
+        <img src="images/jhankar2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Big dream</h2>
+        <h3>Become no.1 Developer.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ex voluptate alias fugiat unde aut vel illo accusantium nisi? Eveniet sequi nostrum similique quidem accusantium ipsum temporibus vel, labore ut porro dolores impedit excepturi unde ad voluptatum atque. Consequuntur quod saepe error fugit, debitis explicabo.</p>
+        <a class="link-button" target="_black" href="https://www.facebook.com/asad.raj.3348390">DOWNLOAD RESUME</a>
+    </div>
+  </section>
+    <section class="exprience-area">
+      <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-exprience">
+       <h2 class="orange-highlight">Full stack web developer</h2> 
+       <h3>2020-present |Pro Level developer</h3>
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, veniam adipisci praesentium ullam architecto accusamus autem sapiente enim possimus quaerat molestias aperiam sequi doloremque! Qui velit iste corrupti vitae consequatur voluptate impedit magnam quos eligendi nostrum, repudiandae quam, nulla facere.</p>
+    </div>
+    <div id="babby-web" class="half-width single-exprience">
+        <h2 class="orange-highlight">Babby web developer</h2>
+        <h3>2020-2021 |Programming Hero learner</h3>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima facere dolorem tempore impedit aliquam eos alias qui rerum. Facere officiis dolorem facilis quod repudiandae magnam hic libero natus sunt, ut, repellendus odit rem porro accusantium nam, laboriosam magni consectetur harum.</P>
+    </div>
+  </section>
+  <footer>
+      <p>@All Right Sererve Asad Web Developer.</p>
+  </footer>
 
 </body>
 </html>
